--- a/Primera-Evaluación/20210927.md
+++ b/Primera-Evaluación/20210927.md
@@ -1,59 +1,64 @@
-Ø CULTUBE 3.0 RESUMEN Ø
+# **2021 Septiembre 27, Lunes**
+
+## Ø CULTUBE 3.0 RESUMEN (pequeña parte del resumen) Ø
 _______________________
 
 
 ▲ Organizadores del evento:
 
-» Instituto de Física Teórica
-» La Casas Encendida
-» Quantumfracture
-» Organización de YOUTUBE España
+- Instituto de Física Teórica
+- La Casas Encendida
+- Quantumfracture
+- Organización de YOUTUBE España
 
-|> Maite Gómez Fraile, Jefa de YOUTUBE España
+1. ### Maite Gómez Fraile, Jefa de YOUTUBE España
 
-Cualquiera puede crearse un canal y muchas personas pueden ver el contenido de cualquier parte y YOUTUBE es la mayor biblioteca del mundo.
+*Cualquiera puede crearse un canal y muchas personas pueden ver el contenido de cualquier parte y YOUTUBE es la mayor biblioteca del mundo.
 CANTAR mide la audiencia de televisión
 COMSCORE mide las audiencias digitales
-En España, 33 minutos de media diaria se dedica a YOUTUBE y más del 90% de los usuarios de YT entran en la plataforma para aprender algo nuevo y lo han intentado.
+En España, 33 minutos de media diaria se dedica a YOUTUBE y más del 90% de los usuarios de YT entran en la plataforma para aprender algo nuevo y lo han intentado.*
 
 
-|> Diana Moran, Ministra de Ciencia e Innovación
+2. ### **Diana Moran, Ministra de Ciencia e Innovación**
 
-España es el primero en el mundo en la doble vacunación
-
-
-|> José Luis Crespo, Quantumfracture
-
-Hacer una buena miniatura para llamar a una audiencia, para poder crear un video y que sea el más visto.
+*España es el primero en el mundo en la doble vacunación*
 
 
-|> Elena Ray, Linguriosa
+3. ### **José Luis Crespo, Quantumfracture**
 
-ALegoría = Metáfora consecutiva dentro de un discurso.
+*Hacer una buena miniatura para llamar a una audiencia, para poder crear un video y que sea el más visto.*
+
+
+4. ### **Elena Ray, Linguriosa**
+
+*ALegoría = Metáfora consecutiva dentro de un discurso.
 Apócope = La composición de las palabras.
 Empezó en una conversación con su novio para abrir un canal.
-"La lavor de un espectador, es no creerse todo lo que dice el divulgador de YT"
+"La lavor de un espectador, es no creerse todo lo que dice el divulgador de YT"*
 
 
-|> Paula, En la puerta de urgencias
+5. ### **Paula, En la puerta de urgencias**
 
-Divulgación sobre sus ideas y experiencia por la pandemia.
+*Divulgación sobre sus ideas y experiencia por la pandemia.
 Expontainidad = Improvisación.
 Empezó en YT exponiendo sobre la ansiedad, miedo e incertidumbre que pasaban los sanitarios por culpa de la pandemia. Se puso un EPI a mediados de abril de 2020.
-Hizo su primer video sin editar, ni guión, para poder transmitir por lo que estaba pasando ella y muchos de sus compañeros.
+Hizo su primer video sin editar, ni guión, para poder transmitir por lo que estaba pasando ella y muchos de sus compañeros.*
 
 
-|> Miguel, Mates Mike
+6. ### **Miguel, Mates Mike**
 
-Teorema de la bola peluda, una bola de pelos tiene una espiral.
+*Teorema de la bola peluda, una bola de pelos tiene una espiral.
 La paradoja del cumpleaños
-    23 personas          100 personas
-      50,7%               99,99997%
+
+|23 personas   |100 personas
+|___           |__
+|50,7%         |99,99997%
+
 ¿ Cuánta musica puede existir ?
    2.4*10^1337 Es un número fibonacci, la sucesión comienza con los números 0 y 1; ​ a partir de estos, «cada término es la suma de los dos anteriores», es la relación de recurrencia que la define. 0,1,1,2,3,5,8,13,21,34,55,89,144,233,377,610,987,1597
-   3.5*10^7 Es la música que hay de momento en Spotify
+   3.5*10^7 Es la música que hay de momento en Spotify*
 
-
+```
 ► Ronda de preguntas:
 
 - Para todos = ¿ Qué tan agusto se sienten, respecto a la presión de lo que se espera de ustedes en su contenido, considerando que cada vez mejora más, requiere más trabajo y producción ?
@@ -67,42 +72,41 @@ La paradoja del cumpleaños
 - Para todos = ¿ Creéis que el público esta igual de investido o implicado en el contenido o que sirve simplemente como mero entretenimiento ?
 
 - Para Mike = ¿ Qué tal te llevas con los físicos e ingenieros que utilizan las diferenciales como las fracciones, en general el poco formalismo que hay con los matemáticos ?
+```
 
-
-• Exponentes de años anteriores 
+• **Exponentes de años anteriores**
 
 Sandra, >> Hiperactina << recomienda great art explain sobre arte en inglés
 Dayo Altozano, >> Dayoscript << recomienda el canal de puto miquel arqueólogo sobre história
 Enrique Fonseca, >> VisualPolitik << recomienda Israel Defense Force sobre armamento militar
 
 
-|> Lucia, Orbytal
+7. ### **Lucia, Orbytal**
 
-Proactive = Proactivo = que se asume la realidad tal cual es y a partir de ella se actúa en consecuencia.
+*Proactive = Proactivo = que se asume la realidad tal cual es y a partir de ella se actúa en consecuencia.
 Serendipity = serendipia =  un descubrimiento o un hallazgo afortunado, valioso e inesperado que se produce de manera accidental, casual, o cuando se está buscando una cosa distinta.
 Se planteo en poder conocer a su ídolo ( Nathan Fillion )
-" Si tú puedes, prueba que no pasa nada y lo mismo algo te llevas "
+" Si tú puedes, prueba que no pasa nada y lo mismo algo te llevas "*
 
 
-|> Enrique, Adictos a la filosofía
+8. ### **Enrique, Adictos a la filosofía**
 
-YOUTUBE es muy poco democrático, al momento cambiar su política de un día a otro.
-" La filosofía es pensar sobre algo, pero muy fuerte "
+*YOUTUBE es muy poco democrático, al momento cambiar su política de un día a otro.
+" La filosofía es pensar sobre algo, pero muy fuerte "*
 
+9. ### **Sofía Herfon**
 
-|> Sofía Herfon
-
-" Muy poco que decir, pero mucho que aprender "
+*" Muy poco que decir, pero mucho que aprender "
 La educación a cambiado mucho en tiempos de 1800 implantqando el estudio para niños y en 1882 llega la tuberculosis, pero hasta 1921 llego la vacuna. No obstante la educación seguían dando y con sus medidas de prevención.
-" El alumno no es el que está inscrito a una matrícula y asiste a clases, el alumno es el que mantiene viva la curiosidad "
+" El alumno no es el que está inscrito a una matrícula y asiste a clases, el alumno es el que mantiene viva la curiosidad "*
 
 
-|> Nate Gentile
+10. ### **Nate Gentile**
 
 " Organizarse para poder dedicarle tiempo a todo lo que quieres "
 En YT ahora mismo hay muchos clickbait, para poder cautivar a la audiencia con miniaturas y títulos para poder llevarlos a tu terreno.
 
-
+```
 ► Ronda de preguntas:
 
 - Para todos = ¿ Qué consideráis más importante que os habéis llevado de vuestra experiencia en YT, tanto por nuestro feedback y la experiencia obtenida en todas las situaciones ?
@@ -112,9 +116,9 @@ En YT ahora mismo hay muchos clickbait, para poder cautivar a la audiencia con m
 - Para todos = ¿ Hay algún video que os gustara mucho y que habéis disfrutado mucho, pero que luego no hay funcionado ?
 
 - Para todos = ¿ Qué futuro nos deparará en la divulgación científica en YT y si es tan prioritaria como parece ?
+```
 
-
-• Exponentes anteriores
+• **Exponentes anteriores**
 
 Rocio Vidal, >> La gata de schrödinger << " Todo lo que se guarda se pierde y todo lo que se gana es lo que se da " recomienda Andrea espín-órbita
 Jaime Altozano, >> Jaime Altozano << recomienda Gatrofísica
@@ -122,29 +126,29 @@ Henry Reich, >> MinuteEarth y MinutePhysics << recomienda Veritasium, Numberphil
 Patricia Tezanos, >> Antroporama << recomienda Linguriosa
 
 
-|> Ainoa Gómez
+11. ### **Ainoa Gómez**
 
-Creadora de contenido de biología, empezó con el canal con el trabajo de fin de Máster y poder incluir el contenido que quiere divulgar.
+*Creadora de contenido de biología, empezó con el canal con el trabajo de fin de Máster y poder incluir el contenido que quiere divulgar.
 Vio muchos videos de cómo empezar en YT.
-Hace videos de biología y poder recomendar sus videos para que sea un refuerzo y que otros profesores la recomienden.
+Hace videos de biología y poder recomendar sus videos para que sea un refuerzo y que otros profesores la recomienden.*
 
 
-|> Víctor, Music Radar Clan
+12. ### **Víctor, Music Radar Clan**
 
-Su contenido se basa investigar a fondo música, en el sentido de la musica de los 60, 70, etc.
+*Su contenido se basa investigar a fondo música, en el sentido de la musica de los 60, 70, etc.
 El tango proviene de una palabra africana.
-" Siempre hay gente a la que le interesa, lo que tienes que decir "
+" Siempre hay gente a la que le interesa, lo que tienes que decir "*
 
 
-|> Pascual y Rodrigo, Destripando la história
+13. ### **Pascual y Rodrigo, Destripando la história**
 
-Pascual estudio Telecomunicaiones
+*Pascual estudio Telecomunicaiones
 Rodrigo quizo hacer un Máster, pero lo dejó
 El contenido que hacen ya lo recomiendan los profesores, sobre história.
 " Tienes que aprender, para un mañana enseñar "
-" Desarollar vuestra pasión en YT de la manera más divertida que podáis "
+" Desarollar vuestra pasión en YT de la manera más divertida que podáis "*
 
-
+```
 ► Ronda de preguntas:
 
 - Para todos = ¿ En algún momento nunca habéis pensado en dejarlo, por qué a la gente no le gustaba lo estabais haciendo ?
@@ -154,11 +158,9 @@ El contenido que hacen ya lo recomiendan los profesores, sobre história.
 - Para todos = ¿ Hay algún proyecto de vídeo que tengáis en Standby desde hace tiempo que no podéis sacar adelante por algún motivo ?
 
 - Para todos = ¿ Existe futuro para la divulgación en YT como antes, creen que ya está demasiado saturado de divulgadores ?
-
-
-=======================================================================================================================================================================
-
-
+```
+___
+```
 ► Mi ronda de preguntas: 
 
 - Para Elena = ¿ Por qué en latinoamérica la pronunciación de las letras "c" y "z", no es la misma que en España ? ¿ Qué pudes decir sobre las palabras tienen dirente significado o ninguno ?
@@ -184,11 +186,11 @@ El contenido que hacen ya lo recomiendan los profesores, sobre história.
 - Para Pascual y Rodrigo = ¿ De qué manera distribuyen el reparto de tareas a la hora de elegir tema de video o solamente surgue improvisadamente ?
 
 - Para todos = ¿ Qué consejo daríais a los nuevos divulgadores, con vuestra experiencia optenida ?
+```
 
+___
 
-***********************************************************************************************************************************************************************
-
-► Ronda de preguntas y respuestas:
+```► Ronda de preguntas y respuestas:
 
 ¿ Cómo me siento al empezar el curso?
 Motivado y con mucho entusiasmo, pero al hacer este resumen todas las semanas se me haría muy pesado
@@ -197,4 +199,4 @@ Motivado y con mucho entusiasmo, pero al hacer este resumen todas las semanas se
 Nos teniamos que acostumbrar a un nuevo método de educación, pero si que funciona para algunos más que otros menos por culpa del coronavirus. La educación de YT desde sus principios podíamos ver videos para aprender algo nuevo, aun que no había mucha variedad a los inicios.
 
 ¿Qué estrategia de trabajo tengo? ¿ O usas ?
-Estrategia de trabajo no tengo, el método que uso es, lo hago y ya lo tengo hecho imdependientemente del tiempo que me lleve hacerlo.
+Estrategia de trabajo no tengo, el método que uso es, lo hago y ya lo tengo hecho imdependientemente del tiempo que me lleve hacerlo.```
