--- a/Tercera-Evaluación/20220520.md
+++ b/Tercera-Evaluación/20220520.md
@@ -12,7 +12,7 @@ ___
 
 ## **Markdown**
 
-![Markdown](/images/markdown.png)
+![Markdown](images/markdown.png)
 
 ## **Git y GitHuh**
-![git y github](/images/git-github.jpg)
+![git y github](images/git-github.jpg)
