he modificado el html de 1º Eva

--- a/Primera-Evaluación/20210927.md
+++ b/Primera-Evaluación/20210927.md
@@ -1,6 +1,6 @@
 # **2021 Septiembre 27, Lunes**
 
-## Ø CULTUBE 3.0 RESUMEN (pequeña parte del resumen) Ø
+## Ø CULTUBE 3.0 RESUMEN ) Ø
 _______________________
 
 
@@ -50,9 +50,9 @@ Hizo su primer video sin editar, ni guión, para poder transmitir por lo que est
 *Teorema de la bola peluda, una bola de pelos tiene una espiral.
 La paradoja del cumpleaños
 
-|23 personas   |100 personas
-|___           |__
-|50,7%         |99,99997%
+|23 personas   |100 personas  |
+|--------------|--------------|
+|50,7%         |99,99997%     |
 
 ¿ Cuánta musica puede existir ?
    2.4*10^1337 Es un número fibonacci, la sucesión comienza con los números 0 y 1; ​ a partir de estos, «cada término es la suma de los dos anteriores», es la relación de recurrencia que la define. 0,1,1,2,3,5,8,13,21,34,55,89,144,233,377,610,987,1597
@@ -171,7 +171,7 @@ ___
 
 - Para Todos = ¿ En su día os habéis planteado abrir un canal para poder monetizar desde un principio ?
 
-- Para Lucia = ¿ Hoy en día sigues siendo fan de Nathan Fillion ? ¿ Harías de nuevo el mismo método para poder conocer a otro ídol@ ?
+- Para Lucia = ¿ Hoy en día sigues siendo fan de Nathan Fillion ? ¿ Harías de nuevo el mismo método para poder conocer a otro ídolo ?
 
 - Para Sofía = ¿ Has diseñado algún edificio o varios ?
 
@@ -190,7 +190,8 @@ ___
 
 ___
 
-```► Ronda de preguntas y respuestas:
+```
+► Ronda de preguntas y respuestas:
 
 ¿ Cómo me siento al empezar el curso?
 Motivado y con mucho entusiasmo, pero al hacer este resumen todas las semanas se me haría muy pesado
@@ -199,4 +200,5 @@ Motivado y con mucho entusiasmo, pero al hacer este resumen todas las semanas se
 Nos teniamos que acostumbrar a un nuevo método de educación, pero si que funciona para algunos más que otros menos por culpa del coronavirus. La educación de YT desde sus principios podíamos ver videos para aprender algo nuevo, aun que no había mucha variedad a los inicios.
 
 ¿Qué estrategia de trabajo tengo? ¿ O usas ?
-Estrategia de trabajo no tengo, el método que uso es, lo hago y ya lo tengo hecho imdependientemente del tiempo que me lleve hacerlo.```
+Estrategia de trabajo no tengo, el método que uso es, lo hago y ya lo tengo hecho imdependientemente del tiempo que me lleve hacerlo.
+```
